force-app/main/default/objects/Dataweave_key_mapping__mdt/Dataweave_key_mapping__mdt.object-meta.xml
<CustomObject>
    <description>Contains key/value pair for mapping responses to Apex, associated with key mapping</description>
    <label>Dataweave key mapping</label>
    <pluralLabel>Dataweave key mappings</pluralLabel>
</CustomObject>