force-app/main/default/objects/Dataweave_key_mapping__mdt/fields/Dataweave_mapping__c.field-meta.xml
<CustomField>
    <fullName>Dataweave_mapping__c</fullName>
    <label>Dataweave mapping</label>
    <referenceTo>Dataweave_mapping__mdt</referenceTo>
    <relationshipLabel>Dataweave key mappings</relationshipLabel>
    <relationshipName>Dataweave_key_mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>