force-app/main/default/objects/Dataweave_key_mapping__mdt/fields/Incoming_key__c.field-meta.xml
<CustomField>
    <fullName>Incoming_key__c</fullName>
    <label>Incoming key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>