force-app/main/default/objects/Dataweave_key_mapping__mdt/fields/Outgoing_key__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_key__c</fullName>
    <label>Outgoing key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>